# Three-Musketeers-FINALS

./: .dockerignore  .gitignore  14B_logs.txt  3b_job_logs.txt  7b_logs.txt  Coder7B_logs.txt  Dockerfile  LICENSE  NEW INFO.md  PROJECT_REVIEW.md  PostmortemEnv_Foundation_Doc.md  Qwen7B_logs.txt  README.md  Revised_event_Context_Restructured.md  [External] Apr ‘26 OpenEnv Hackathon Themes.txt  _themes.txt  active_jobs.txt  analysis_results (1).md  analysis_results (2).md  app.py  blog_post.md  brutal_rating.md  cancel_jobs.py  cancel_one.py  check_progress.py  client.py  conftest.py  dump_logs.py  extract_eval.py  extract_progress.py  go-throught-external-apr-parallel-rainbow.md  inference.py  launch_fast.py  launch_job.py  message (1).txt  openenv.yaml  pitch_kit.md  poll_jobs.py  probe_account.py  pyproject.toml  (+16 more)
data/: __init__.py  generator.py  seed_generator.py
engine/: __init__.py  environment.py  grader.py  reward_calculator.py  rubrics.py
models/: __init__.py  action.py  observation.py  reward.py  state.py
openenv/: __init__.py
scripts/: analyze_diversity.py  hf_job_reeval.py  hf_job_train.py  plot_agent_comparison.py  run_frontier_benchmark.py
server/: __init__.py  app.py
static/: app.js  index.html  style.css
tests/: __init__.py  test_action_parsers.py  test_environment.py  test_generator.py  test_grader.py  test_hf_inference_error.py  test_seed_generator.py  test_training_loop.py
training_data/: evaluation_results.json  live_training_smoke.json  oracle_demos.jsonl  oracle_rewards.json  sft_eval_results.json
training_logs/: sft_metrics.json
(+26 files in other folders)
