[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postmortemenv"
version = "1.0.0"
description = "PostmortemEnv — An epistemic RL environment where LLM agents investigate cloud outages"
authors = [
    {name = "Three Musketeers"}
]
dependencies = [
    "pydantic>=2.4.0",
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "httpx>=0.25.0"
]
requires-python = ">=3.11"

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "httpx>=0.25.0"
]
